style/main.css
/* ... */
.heading:after {
	content: "";
	display: block;
	clear: both;
}

h1.title {
	font-size: 64px;
	font-weight: bold;
	color: #799c38;
	margin: 0;
	display: block;
	float: left;
}

@-webkit-keyframes move-up {
	0% {
		top: 25px;
		opacity: 1;
	}

	100% {
		top: -50px;
		opacity: 0;
	}
}

@-moz-keyframes move-up {
	0% {
		top: 25px;
		opacity: 1;
	}

	100% {
		top: -50px;
		opacity: 0;
	}
}

@keyframes move-up {
	0% {
		top: 25px;
		opacity: 1;
	}

	100% {
		top: -50px;
		opacity: 0;
	}
}

.scores-container {
	float: right;
	text-align: right;
}

.score-container,
.best-container {
	position: relative;
	display: inline-block;
	background: #8a8b8c;
	padding: 15px 25px;
	font-size: 20px;
	height: 25px;
	line-height: 47px;
	font-weight: bold;
	border-radius: 3px;
	color: white;
	margin-top: 8px;
	text-align: center;
}
.score-container:after,
.best-container:after {
	position: absolute;
	width: 100%;
	top: 10px;
	left: 0;
	text-transform: uppercase;
	font-size: 13px;
	line-height: 13px;
	text-align: center;
	color: #eee4da;
}
.score-container .score-addition,
.best-container .score-addition {
	position: absolute;
	right: 30px;
	color: red;
	font-size: 25px;
	line-height: 25px;
	font-weight: bold;
	color: rgba(119, 110, 101, 0.9);
	z-index: 100;
	-webkit-animation: move-up 600ms ease-in;
	-moz-animation: move-up 600ms ease-in;
	animation: move-up 600ms ease-in;
	-webkit-animation-fill-mode: both;
	-moz-animation-fill-mode: both;
	animation-fill-mode: both;
}

.score-container:after {
	content: "Score";
}

.best-container:after {
	content: "Best";
}

p {
	margin-top: 0;
	margin-bottom: 10px;
	line-height: 1.65;
}

a {
	color: #799c38;
	font-weight: bold;
	text-decoration: underline;
	cursor: pointer;
}

strong.important {
	text-transform: uppercase;
}

hr {
	border: none;
	border-bottom: 1px solid #d8d4d0;
	margin: 15px 0;
}

.container {
	padding: 80px 150px;
	background: #fff;
	border: 1px solid #696968;
	border-top: 4px solid #799c38;
	border-radius: 0px 0px 5px 5px;
	-moz-border-radius: 0px 0px 5px 5px;
	-webkit-box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.35);
	box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.35);
	width: 90%;
	margin: 0 auto;
	max-width: 500px;
}

#bg-img {
	position: absolute;
	object-fit: contain;
	top: -80px;
	left: -80px;
	padding: 15px;
	width: 600px;
	height: 600px;
	opacity: 10%;
	overflow: visible !important;
}

@-webkit-keyframes fade-in {
	0% {
		opacity: 0;
	}

	100% {
		opacity: 1;
	}
}

@-moz-keyframes fade-in {
	0% {
		opacity: 0;
	}

	100% {
		opacity: 1;
	}
}

@keyframes fade-in {
	0% {
		opacity: 0;
	}

	100% {
		opacity: 1;
	}
}

.game-container {
	position: relative;
	padding: 15px;
	cursor: default;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-moz-user-select: none;
	background: #8a8b8c;
	border-radius: 6px;
	width: 500px;
	height: 500px;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}
.game-container .game-message {
	display: none;
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	background: rgba(238, 228, 218, 0.5);
	z-index: 100;
	text-align: center;
	-webkit-animation: fade-in 800ms ease 1200ms;
	-moz-animation: fade-in 800ms ease 1200ms;
	animation: fade-in 800ms ease 1200ms;
	-webkit-animation-fill-mode: both;
	-moz-animation-fill-mode: both;
	animation-fill-mode: both;
}
.game-container .game-message p {
	font-size: 60px;
	font-weight: bold;
	height: 60px;
	line-height: 60px;
	margin-top: 222px;
}
.game-container .game-message .lower {
	display: block;
	margin-top: 59px;
}
.game-container .game-message a {
	display: inline-block;
	background: #8f7a66;
	border-radius: 3px;
	padding: 0 20px;
	text-decoration: none;
	color: #f9f6f2;
	height: 40px;
	line-height: 42px;
	margin-left: 9px;
}
.game-container .game-message a.keep-playing-button {
	display: none;
}
.game-container .game-message.game-won {
	background: rgba(237, 194, 46, 0.5);
	color: #f9f6f2;
}
.game-container .game-message.game-won a.keep-playing-button {
	display: inline-block;
}
.game-container .game-message.game-won,
.game-container .game-message.game-over {
	display: block;
}

.grid-container {
	position: absolute;
	z-index: 1;
}

.grid-row {
	margin-bottom: 15px;
}
.grid-row:last-child {
	margin-bottom: 0;
}
.grid-row:after {
	content: "";
	display: block;
	clear: both;
}

.grid-cell {
	width: 106.25px;
	height: 106.25px;
	margin-right: 15px;
	float: left;
	border-radius: 3px;
	background: #c2c0bf;
}
.grid-cell:last-child {
	margin-right: 0;
}

.tile-container {
	position: absolute;
	z-index: 2;
}

.tile,
.tile .tile-inner {
	width: 107px;
	height: 107px;
	line-height: 116.25px;
}
.tile.tile-position-1-1 {
	-webkit-transform: translate(0px, 0px);
	-moz-transform: translate(0px, 0px);
	transform: translate(0px, 0px);
}
.tile.tile-position-1-2 {
	-webkit-transform: translate(0px, 121px);
	-moz-transform: translate(0px, 121px);
	transform: translate(0px, 121px);
}
.tile.tile-position-1-3 {
	-webkit-transform: translate(0px, 242px);
	-moz-transform: translate(0px, 242px);
	transform: translate(0px, 242px);
}
.tile.tile-position-1-4 {
	-webkit-transform: translate(0px, 363px);
	-moz-transform: translate(0px, 363px);
	transform: translate(0px, 363px);
}
.tile.tile-position-2-1 {
	-webkit-transform: translate(121px, 0px);
	-moz-transform: translate(121px, 0px);
	transform: translate(121px, 0px);
}
.tile.tile-position-2-2 {
	-webkit-transform: translate(121px, 121px);
	-moz-transform: translate(121px, 121px);
	transform: translate(121px, 121px);
}
.tile.tile-position-2-3 {
	-webkit-transform: translate(121px, 242px);
	-moz-transform: translate(121px, 242px);
	transform: translate(121px, 242px);
}
.tile.tile-position-2-4 {
	-webkit-transform: translate(121px, 363px);
	-moz-transform: translate(121px, 363px);
	transform: translate(121px, 363px);
}
.tile.tile-position-3-1 {
	-webkit-transform: translate(242px, 0px);
	-moz-transform: translate(242px, 0px);
	transform: translate(242px, 0px);
}
/* ... */

